samples/_failures_safe/1761316882_f7d38c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a71ecee.c: In function ‘next_token’:
./samples/SAFE/__tmp_3a71ecee.c:129:59: error: expected ‘]’ at end of input
  129 |             lexer->current.value[i++] = lexer->input[lexer
      |                                                           ^
      |                                                           ]
./samples/SAFE/__tmp_3a71ecee.c:129:53: error: array subscript is not an integer
  129 |             lexer->current.value[i++] = lexer->input[lexer
      |                                                     ^
./samples/SAFE/__tmp_3a71ecee.c:129:13: error: expected declaration or statement at end of input
  129 |             lexer->current.value[i++] = lexer->input[lexer
      |             ^~~~~
./samples/SAFE/__tmp_3a71ecee.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3a71ecee.c:129:13: error: expected declaration or statement at end of input
